fix: layout overflow

--- a/components/organisms/Swiper/Swiper.module.scss
+++ b/components/organisms/Swiper/Swiper.module.scss
@@ -1,8 +1,4 @@
 @import "/styles/variables.scss";
 @import "/styles/mixin.scss";
 
-.swiper {
-    @include tablet {
-        overflow: visible !important;
-    }
-}
+.swiper {}
