--- a/components/templates/Home/FAQSection/FAQSection.module.scss
+++ b/components/templates/Home/FAQSection/FAQSection.module.scss
@@ -90,7 +90,7 @@
   }
 
   @include mobile {
-    font-size: 128px;
+    font-size: 96px;
     line-height: 180px;
   }
 }
